[model][view] References are for 2ndary literature
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/_references.scss
+++ b/app/assets/stylesheets/_references.scss
@@ -13,7 +13,7 @@
         @include make-col(2);
         @extend .p-x-0;
       }
-      .col-reference-medium {
+      .col-reference-container {
         @include make-col(1);
         @extend .p-x-0;
       }
