--- a/app/views/references/show/_content.html.erb
+++ b/app/views/references/show/_content.html.erb
@@ -13,9 +13,9 @@
   </div>
 </div>
 <div class="row">
-  <label class="col-md-3"><strong><%= Reference.human_attribute_name :medium %></strong></label>
+  <label class="col-md-3"><strong><%= Reference.human_attribute_name :container %></strong></label>
   <div class="col-md-9">
-    <%= t(reference.medium, scope: 'activerecord.attributes.reference.mediums') %>
+    <%= reference.container %>
   </div>
 </div>
 <div class="row">
