--- a/app/views/deeds/_deed.html.erb
+++ b/app/views/deeds/_deed.html.erb
@@ -76,26 +76,19 @@
       <%= deed.documents.count %>
       <%= icon_for Document %>
     <% end %>
+    <%= link_to seals_path(deed_id: deed.id),
+                class: 'btn btn-sm btn-secondary',
+                title: t('views.show_linked', what: Seal.model_name.human(count: 2)),
+                data: { toggle: 'tooltip' } do %>
+        <%= deed.seals.count %>
+        <%= icon_for Seal %>
+    <% end %>
     <%= link_to references_path(deed_id: deed.id),
                 class: 'btn btn-sm btn-secondary',
                 title: t('views.show_linked', what: Reference.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= deed.references.count %>
       <%= icon_for Reference %>
-    <% end %>
-    <% if deed.seal.nil? %>
-      <%= link_to nil,
-                  class: 'btn btn-sm btn-outline-secondary disabled' do %>
-        <%= icon_for Seal %>
-      <% end %>
-    <% else %>
-      <%= link_to seal_path(deed.seal),
-                  class: 'btn btn-sm btn-secondary',
-                  title: t('views.deed.show_linked_seal'),
-                  data: { toggle: 'tooltip' },
-                  remote: true do %>
-        <%= icon_for Seal %>
-      <% end %>
     <% end %>
   </div>
 
