--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@
 @import "content_translations";
 @import "deeds";
 @import "documents";
-@import "mentions";
+@import "mention_entries";
 @import "people";
 @import "places";
 @import "roles";
