--- a/app/views/mention_entries/form/_own_fields.html.erb
+++ b/app/views/mention_entries/form/_own_fields.html.erb
@@ -1,4 +1,4 @@
-<%= fields_for @mention do |f| %>
+<%= fields_for @mention_entry do |f| %>
   <div id="assoc-deed" class="row form-group">
     <%= f.label :deed, class: 'col-md-3 form-control-label' %>
     <div class="col-md-9">
