--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -20,30 +20,30 @@
   </div>
 
   <div class="btn-group btn-group-sm" role="group">
-    <%= link_to mentions_path(place_id: place.id),
+    <%= link_to mention_entries_path(place_id: place.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t('views.show_linked', what: Mention.model_name.human(count: 2)),
+                title: t('views.show_linked', what: MentionEntry.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
-      <%= place.mentions.count %>
-      <%= icon_for Mention %>
+      <%= place.mention_entries.count %>
+      <%= icon_for MentionEntry %>
     <% end %>
     <span class="btn btn-sm btn-secondary"
           title="<%= t('views.number_linked', what: Person.model_name.human(count: 2)) %>"
           data-toggle="tooltip">
-      <%= place.mentioned_people.length %>
+      <%= place.mention_entryed_people.length %>
       <%= icon_for Person %>
     </span>
     <span class="btn btn-sm btn-secondary"
           title="<%= t('views.number_linked', what: Role.model_name.human(count: 2)) %>"
           data-toggle="tooltip">
-      <%= place.mentioned_roles.length %>
+      <%= place.mention_entryed_roles.length %>
       <%= icon_for Role %>
     </span>
     <%= link_to deeds_path(place_id: place.id),
                 class: 'btn btn-sm btn-secondary',
                 title: t('views.show_linked', what: Deed.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
-      <%= place.mentioned_deeds.length %>
+      <%= place.mention_entryed_deeds.length %>
       <%= icon_for Deed %>
     <% end %>
   </div>
