--- a/app/views/roles/_role.html.erb
+++ b/app/views/roles/_role.html.erb
@@ -31,30 +31,30 @@
   </div>
 
   <div class="btn-group btn-group-sm" role="group">
-    <%= link_to mentions_path(role_id: role.id),
+    <%= link_to mention_entries_path(role_id: role.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t('views.show_linked', what: Mention.model_name.human(count: 2)),
+                title: t('views.show_linked', what: MentionEntry.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
-      <%= role.mentions.count %>
-      <%= icon_for Mention %>
+      <%= role.mention_entries.count %>
+      <%= icon_for MentionEntry %>
     <% end %>
     <span class="btn btn-sm btn-secondary"
           title="<%= t('views.number_linked', what: Person.model_name.human(count: 2)) %>"
           data-toggle="tooltip">
-      <%= role.mentioned_people.length %>
+      <%= role.mention_entryed_people.length %>
       <%= icon_for Person %>
     </span>
     <span class="btn btn-sm btn-secondary"
           title="<%= t('views.number_linked', what: Place.model_name.human(count: 2)) %>"
           data-toggle="tooltip">
-      <%= role.mentioned_places.length %>
+      <%= role.mention_entryed_places.length %>
       <%= icon_for Place %>
     </span>
     <%= link_to deeds_path(role_id: role.id),
                 class: 'btn btn-sm btn-secondary',
                 title: t('views.show_linked', what: Deed.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
-      <%= role.mentioned_deeds.length %>
+      <%= role.mention_entryed_deeds.length %>
       <%= icon_for Deed %>
     <% end %>
   </div>
