--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -36,9 +36,9 @@
     </ul>
   </li>
   <li class="nav-item">
-    <%= link_to mentions_path, class: "nav-link#{' active' if current_page?(controller: :mentions)}" do %>
-        <%= model_name_with_icon Mention, :plural %>
-        <span class="tag tag-pill tag-default pull-right"><%= Mention.count %></span>
+    <%= link_to mention_entries_path, class: "nav-link#{' active' if current_page?(controller: :mention_entries)}" do %>
+        <%= model_name_with_icon MentionEntry, :plural %>
+        <span class="tag tag-pill tag-default pull-right"><%= MentionEntry.count %></span>
     <% end %>
 
     <ul class="nav nav-pills nav-stacked bg-faded" role="menu">
