--- a/app/views/deeds/_deed.html.erb
+++ b/app/views/deeds/_deed.html.erb
@@ -93,12 +93,12 @@
   </div>
 
   <div class="btn-group btn-group-sm" role="group">
-    <%= link_to mention_entries_path(deed_id: deed.id),
+    <%= link_to mention_mention_entries_path(deed_id: deed.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t('views.show_linked', what: MentionEntry.model_name.human(count: 2)),
+                title: t('views.show_linked', what: Mention::MentionEntry.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
       <%= deed.mention_entries.count %>
-      <%= icon_for MentionEntry %>
+      <%= icon_for Mention::MentionEntry %>
     <% end %>
     <%= link_to people_path(deed_id: deed.id),
                 class: 'btn btn-sm btn-secondary',
